--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,39 @@
     <p class="text-muted mb-4">
       Measure performance, detect problems, and optimize your connection
     </p>
+    <label class="connection-label">
+      نوع الاتصال
+    </label>
+    <div class="mb-3 text-center">
 
+      <div class="connection-wrapper text-center mb-4">
+
+
+        <div class="radio-group">
+
+          <label class="radio-card">
+            <input type="radio" name="connection" value="wifi" checked>
+            <span class="radio-custom"></span>
+            📶 WiFi
+          </label>
+
+          <label class="radio-card">
+            <input type="radio" name="connection" value="ethernet">
+            <span class="radio-custom"></span>
+            🔌 Ethernet
+          </label>
+
+          <label class="radio-card">
+            <input type="radio" name="connection" value="cellular">
+            <span class="radio-custom"></span>
+            📡 Cellular
+          </label>
+
+        </div>
+
+      </div>
+
+    </div>
     <button onclick="startSpeedTest()">Start Now</button>
 
   </section>
