Improve UI & performance

--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,12 @@
               <strong id="uploadValue">0</strong> Mbps
             </div>
 
+            <div class="row text-center mt-3">
+              <div class="col-12">
+                <p class="mb-1">🌍 ISP Information</p>
+                <small id="ispInfo">Detecting...</small>
+              </div>
+            </div>
           </div>
 
           <!-- Status -->
